--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mineflayer-plugin-template",
+  "name": "mineflayer-collectblock",
   "version": "1.0.0",
-  "description": "A template repository for creating Mineflayer plugins using Typescript.",
+  "description": "A simple utility plugin for Mineflayer that add a higher level API for collecting blocks.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
@@ -11,21 +11,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TheDudeFromCI/mineflayer-plugin-template.git"
+    "url": "git+https://github.com/TheDudeFromCI/mineflayer-collectblock.git"
   },
   "keywords": [
     "mineflayer",
     "plugin",
-    "template"
+    "api",
+    "utility",
+    "helper",
+    "collect"
   ],
   "author": "TheDudeFromCI",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TheDudeFromCI/mineflayer-plugin-template/issues"
+    "url": "https://github.com/TheDudeFromCI/mineflayer-collectblock/issues"
   },
-  "homepage": "https://github.com/TheDudeFromCI/mineflayer-plugin-template#readme",
+  "homepage": "https://github.com/TheDudeFromCI/mineflayer-collectblock#readme",
   "dependencies": {
-    "mineflayer": "^2.21.0"
+    "mineflayer": "^2.29.0"
   },
   "devDependencies": {
     "@types/node": "14.11.2",
