--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   },
   "homepage": "https://github.com/TheDudeFromCI/mineflayer-collectblock#readme",
   "dependencies": {
+    "minecraft-data": "^2.68.1",
     "mineflayer": "^2.29.0",
+    "mineflayer-pathfinder": "^1.0.10",
+    "mineflayer-utils": "^0.1.3",
     "prismarine-block": "^1.7.1"
   },
   "devDependencies": {
-    "@types/node": "14.11.2",
+    "@types/node": "^14.11.2",
     "typescript": "4.0.3"
   },
   "files": [
