--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mineflayer": "^2.29.0",
     "mineflayer-pathfinder": "^1.0.10",
     "mineflayer-utils": "^0.1.3",
-    "prismarine-block": "^1.7.1"
+    "prismarine-block": "^1.7.1",
+    "prismarine-entity": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
