--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && require-self",
     "clean": "rm -rf lib",
     "test": "test"
   },
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/TheDudeFromCI/mineflayer-collectblock#readme",
   "dependencies": {
     "minecraft-data": "^2.68.1",
-    "mineflayer": "^2.29.0",
+    "mineflayer": "2.27.0",
     "mineflayer-pathfinder": "^1.0.10",
     "mineflayer-utils": "^0.1.3",
     "prismarine-block": "^1.7.1",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
+    "require-self": "^0.2.3",
     "typescript": "4.0.3"
   },
   "files": [
