--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/TheDudeFromCI/mineflayer-collectblock#readme",
   "dependencies": {
     "minecraft-data": "^2.68.1",
-    "mineflayer": "2.27.0",
+    "mineflayer": "^2.29.0",
     "mineflayer-pathfinder": "^1.0.10",
     "mineflayer-utils": "^0.1.3",
     "prismarine-block": "^1.7.1",
