--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "prismarine-entity": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "14.14.2",
-    "require-self": "0.2.3",
-    "typescript": "4.0.3"
+    "@types/node": "^14.14.2",
+    "require-self": "^0.2.3",
+    "typescript": "^4.0.3"
   },
   "files": [
     "lib/**/*"
