--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
   },
   "homepage": "https://github.com/TheDudeFromCI/mineflayer-collectblock#readme",
   "dependencies": {
-    "mineflayer": "^2.31.0",
+    "mineflayer": "^2.32.0",
     "mineflayer-pathfinder": "^1.0.11",
-    "mineflayer-utils": "^0.1.3",
-    "prismarine-block": "^1.7.1",
-    "prismarine-entity": "^1.0.0"
+    "mineflayer-utils": "^0.1.3"
   },
   "devDependencies": {
     "@types/node": "14.14.0",
