--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,9 @@ jobs:
       with:
         node-version: 14.5.0
         
-    - name: Compile TypeScript
-      run: npm install && tsc
-
+    - name: Setup npm and build
+      run: npm install && npm run build
+  
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
@@ -32,8 +32,8 @@ jobs:
       with:
         node-version: 14.5.0
         
-    - name: Compile TypeScript
-      run: npm install && tsc
+    - name: Setup npm and build
+      run: npm install && npm run build
 
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@1.3.4
