--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "mineflayer": "^2.32.0",
     "mineflayer-pathfinder": "^1.0.11",
+    "mineflayer-tool": "^1.1.0",
     "mineflayer-utils": "^0.1.3"
   },
   "devDependencies": {
