--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
   },
   "homepage": "https://github.com/TheDudeFromCI/mineflayer-collectblock#readme",
   "dependencies": {
-    "mineflayer": "^2.37.1",
+    "mineflayer": "^2.39.2",
     "mineflayer-pathfinder": "^1.2.2",
-    "mineflayer-tool": "^1.1.0",
-    "mineflayer-utils": "^0.1.3"
+    "mineflayer-tool": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.14",
