--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "dependencies": {
     "mineflayer": "^3.0.0",
     "mineflayer-pathfinder": "^1.2.2",
-    "mineflayer-tool": "^1.1.0",
-    "mineflayer-utils": "^0.1.3"
+    "mineflayer-tool": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.14",
