--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "ts-standard && tsc && require-self",
     "clean": "rm -rf lib",
-    "test": "test"
+    "test": "test",
+    "fix": "ts-standard --fix"
   },
   "repository": {
     "type": "git",
