--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mineflayer-collectblock",
-  "version": "1.4.1",
+  "version": "1.4.11",
   "description": "A simple utility plugin for Mineflayer that add a higher level API for collecting blocks.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TheDudeFromCI/mineflayer-collectblock.git"
+    "url": "git+https://github.com/LORD-ME-CODE/mineflayer-collectblock.git"
   },
   "keywords": [
     "mineflayer",
@@ -21,12 +21,12 @@
     "helper",
     "collect"
   ],
-  "author": "TheDudeFromCI",
+  "author": "LORD-ME-CODE",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TheDudeFromCI/mineflayer-collectblock/issues"
+    "url": "https://github.com/LORD-ME-CODE/mineflayer-collectblock/issues"
   },
-  "homepage": "https://github.com/TheDudeFromCI/mineflayer-collectblock#readme",
+  "homepage": "https://github.com/LORD-ME-CODE/mineflayer-collectblock#readme",
   "dependencies": {
     "mineflayer": "^4.0.0",
     "mineflayer-pathfinder": "^2.1.1",
@@ -36,7 +36,7 @@
     "@types/node": "^17.0.4",
     "require-self": "^0.2.3",
     "ts-standard": "^11.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.7.3"
   },
   "files": [
     "lib/**/*"
