update: mineflayer core

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "ts-standard && tsc && require-self",
+    "build": "tsc && require-self",
     "clean": "rm -rf lib",
     "test": "test"
   },
@@ -21,21 +21,20 @@
     "helper",
     "collect"
   ],
-  "author": "LORD-ME-CODE",
+  "author": "Mineflayer (origin), LORD-ME-CODE (updater), Cleboost (maintainer)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/LORD-ME-CODE/mineflayer-collectblock/issues"
   },
   "homepage": "https://github.com/LORD-ME-CODE/mineflayer-collectblock#readme",
   "dependencies": {
-    "mineflayer": "^4.0.0",
+    "mineflayer": "^4.20.1",
     "mineflayer-pathfinder": "^2.1.1",
-    "mineflayer-tool": "^1.1.0"
+    "mineflayer-tool": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.6.4",
     "require-self": "^0.2.3",
-    "ts-standard": "^11.0.0",
     "typescript": "^4.7.3"
   },
   "files": [
